* Unnaturally hard rock walls have a new default glyph.
* The % screen has a new layout.
* You are prompted to continue wearing/unwearing armour when a monster comes
  into view.
* "pickup_mode = multi|single" is now "pickup_menu = true|false", with true
  being the default; "pickup_menu_limit" has been introduced to handle
  the old "auto:X" settings.
* The WebTiles spectator box sorts names and links online player profiles.
* URLs occurring in WebTiles chat messages are hyperlinked.
* New default minimap colours.
* Examining a monster now displays the speeds at which it takes actions if
  those actions are slower or faster than its normal speed.
* arena_delay, which controls the speed of arena play and animations, is now
  available outside of arena mode as view_delay.
* Monsters get invisible monster indicators for one turn after they become
  invisible to the player.

Stone Soup 0.13 (20131011)
--------------------------

0.13 highlights
---------------
* A new race: Gargoyles.
* A reimagined Skald background.
* A thorough rework of the monster set in Crypt.
* Improvements to many evokable items.
* A new item: sack of spiders.
* Massively overhauled layout generators.
* Summoning school: per-spell limits and no stair following or pulling.
* New Sprint map: linesprint.

Branches, environment
---------------------
* A new Sprint map: "|||||||||||||||||||||||||||||" by st (otherwise known as
  linesprint).
* Branches now have exactly one exit stair (except the Dungeon, which can,
  but is not guaranteed, to have more).
* Many new layouts have been added to most branches, including unique layouts
  for branches that didn't have them; and numerous tweaks and improvements
  to existing layouts.
* Vaults can now be placed at the centre of some layouts prepared to accept
  them there.
* All portal vaults entrances that time out are now announced.
* Temple overflow altars can now contain multiple altars.
* New shop type: gadget shops, which sell evokable items.